assets/css/sass/woocommerce/product-page.scss
/* ... */
// Constainer
.site-full-width-container {
	.woocommerce-tabs {
		.woocommerce-Tabs-panel {
			max-width: 100%;
		}
	}
}

.product-page-container {
	padding-bottom: 90px;
}

.single-product {
	// Site container
	&.site-normal-container {
		// No sidebar
		&.no-sidebar {
			.site-content {
				> .woostify-container {
					@media (min-width: $screen-md) {
						max-width: 100%;
					}
				}
			}
		}
	}

	.site-content {
		> .woostify-container {
			padding-left: 0;
			padding-right: 0;
		}
	}

	// Sidebar
	&:not(.site-full-width-stretched-container) {
		&.left-sidebar,
		&.right-sidebar {
			.site-content {
				> .woostify-container {
					padding-left: 15px;
					padding-right: 15px;
				}
			}
		}
	}

	// Content top
	.content-top {
		padding: 35px 0 15px 0;
		position: relative;
		z-index: 1;

		.woostify-container {
			display: flex;
			flex-wrap: wrap;
			justify-content: space-between;

			&:after {
				content: none;
			}
		}

		.woocommerce {
			flex: 0 0 100%;
		}
	}

	.star-rating {
		vertical-align: text-top;
		margin-right: 17px;
	}

	.summary {
		.yith-wcwl-add-to-wishlist {
			display: block;
			margin: 20px 0;
		}
	}

	@media (max-width: $screen-md - 1) {
		.wc-breadcrumb {
			text-align: center;
			padding-bottom: 0;
		}
	}
}

// GALLERY
.product-gallery {
	position: relative;
	float: left;
	max-width: 100%;

	@media (min-width: $screen-md) {
		width: calc((100% - 30px) / 2);
	}

	@media (max-width: $screen-md - 1) {
		display: block;
		float: none;
		width: 100%;
	}

	&.wc-default-gallery {
		.onsale {
			z-index: 1;
		}

		.woocommerce-product-gallery__wrapper {
			max-width: unset;
			margin: 0;
		}

		.woocommerce-product-gallery__trigger {
			position: absolute;
			right: 10px;
			top: 10px;
			z-index: 2;
			width: 20px;
			height: 20px;
			img {
				width: 100% !important;
				height: 100% !important;
			}
		}

		.flex-control-thumbs {
			list-style: none;
			padding: 0;
			li {
				display: inline-block;
				margin: 0 1.5em 1.5em 0;
				img {
					border: 1px solid transparent;

					&.flex-active {
						border-color: #555;
					}
				}
			}
		}
	}

	&.vertical-style, &.horizontal-style {
		#product-images {
			.image-item {
				display: none;
				&:first-child {
					display: block;
				}
			}
			&.flickity-enabled {
				.image-item {
					display: block;
				}
			}
		}
	}

	&.column-style, &.grid-style {
		@media (max-width: $screen-md - 1) {
			#product-images {
				.image-item {
					display: none;
					&:first-child {
						display: block;
					}
				}
				&.flickity-enabled {
					.image-item {
						display: block;
					}
				}
			}
		}

	}
	// Vertical slider layout
	&.vertical-style.has-product-thumbnails {
		.thumb-btn {
			display: none;
		}
		@media (max-width: $screen-sm - 1) {
			#product-thumbnail-images {
				display: flex;

				&.flickity-enabled {
					display: block;
				}
			}
		}
		@media (min-width: $screen-sm) {
			position: relative;
			display: flex;

			.product-images {
				order: 2;
				flex: 0 1 100%;
			}

			.product-thumbnail-images {
				position: relative;
				width: 50px;
				min-width: 50px;
				margin-right: 20px;
				height: 100%;
			}

			.thumb-btn {
				display: block;
				border-radius: 50%;
				background: #fff;
				position: absolute;
				left: 50%;
				transform: translateX(-50%);
				border: none;
				width: 30px;
				height: 30px;

				.woostify-svg-icon {
					display: inline-flex;
					position: absolute;
					top: 50%;
					left: 50%;
					transform: translate(-50%, -50%);

					svg {
						display: block;
						width: 15px;
						height: 15px;
					}
				}

				&.next {
					bottom: 0;
				}
				&.prev {
					top: 0;
				}
			}

			#product-thumbnail-images {
				overflow: hidden;

				.thumbnail-item {
					margin-bottom: 10px;

					&:last-child {
						margin-bottom: 0;
					}
				}

				&.has-buttons {
					.thumbnail-item {
						&:first-child {
							margin-top: 35px;
						}
						&:last-child {
							margin-bottom: 35px;
						}
					}
				}
			}
		}
	}

	&.horizontal-style {
		#product-thumbnail-images {
			display: flex;

			&.flickity-enabled {
				display: block;
			}

			.thumbnail-item {
				&:first-child {
					margin-left: 1px;
				}
			}
		}
	}

	.onsale {
		z-index: 0;
	}

	// Grid layout
	&.grid-style {

		.product-group-btns {
			.photoswipe-toggle-button {
				@media (min-width: $screen-md) {
					display: none;
				}
			}
		}
		&.has-product-thumbnails {
			@media (min-width: $screen-md) {
				.image-item {
					width: calc( ( 100% - 30px ) / 2 );
					float: left;
					margin-bottom: 30px;

					&:nth-of-type(even) {
						margin-left: 30px;
					}
				}
			}
		}
	}

	// One column layout
	&.column-style {
		.product-group-btns {
			.photoswipe-toggle-button {
				@media (min-width: $screen-md) {
					display: none;
				}
			}
		}
		&.has-product-thumbnails {

			@media (min-width: $screen-md) {
				.image-item {
					clear: both;
					float: left;
					margin-bottom: 30px;

					&:last-of-type {
						margin-bottom: 0;
					}
				}
			}
		}
	}
}

.product-thumbnail-images {
	animation: fadeIn 2s;
	&.has-single-thumbnail-image {
		display: none;
	}
}

// PRODUCT IMAGES
.product-images {
	overflow: hidden;
	position: relative;
	animation: fadeIn 2s;

	.image-item {
		margin: 0;
		cursor: pointer;
		width: 100%;

		a {
			display: block;
		}
	}
}

.has-product-thumbnails.horizontal-style {
	.product-images {
		margin-bottom: 20px;
	}
}

.product-thumbnail-images {
	.thumbnail-item {
		cursor: pointer;
		position: relative;
		max-width: 70px;
		width: 100%;
		margin-right: 10px;

		&.is-selected.is-nav-selected {
			img {
				border: 1px solid #555;
			}
		}
	}

	img {
		border: 1px solid $tr;
	}
}

// Image loading
.image-loading {
	position: relative;

	@extend .circle-loading;
}
/* ... */

